[project]
name = "streamlit-berghain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.22.0",
    "streamlit>=1.42.0",
    "plotly>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
